@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/synce-librapi2
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-librapi2/ChangeLog,v 1.4 2003/09/02 19:40:09 liquidx Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-pda/synce-librapi2/ChangeLog,v 1.5 2004/02/29 00:12:44 liquidx Exp $
+
+  29 Feb 2004; Alastair Tse <liquidx@gentoo.org> synce-librapi2-0.3.ebuild,
+  synce-librapi2-0.7.ebuild, synce-librapi2-0.8.1.ebuild:
+  stable bump and cleanup
 
 *synce-librapi2-0.8.1 (02 Sep 2003)
 
